# observability360

./: .gitignore  README.md  Readme.md  docker-compose.yml  otelcol-config.yml  requirements.txt
Architectures/: .$architecture.drawio.bkp  architecture.drawio
IaC/: .gitignore  acr.tf  adx.tf  grafana.tf  main.tf  opentelemetry-collector.tf  provider.tf  variables.tf  version.tf
IaC/app/: app.tf  app_main.tf  cadvisor.tf  chess_black_agent.tf  chess_main.tf  chess_white_agent.tf  communication.tf  fluentbit.tf  frontend.tf  grafana.tf  jaeger.tf  kube-state-metrics.tf  main.tf  monitor.tf  online_store_cart.tf  online_store_main.tf  online_store_order.tf  online_store_product.tf  online_store_ui.tf  online_store_user.tf  opentelemetry-collector.tf  otel-demo-app.tf  outputs.tf  pixie.tf  provider.tf  variables.tf  version.tf
IaC/grafana/: Dockerfile
IaC/infra/: acr.tf  adx.tf  aks.tf  main.tf  monitor.tf  network.tf  openai.tf  variables.tf  version.tf
application/frontend/: Dockerfile.tftpl  package.json
chess/: board.py  pyproject.toml  requirements.txt
chess/black/: Dockerfile  black_agent.py
chess/otel/: otel.py
chess/white/: Dockerfile  white_agent.py
fluentbit/: fluent-bit.conf.tftpl  parsers.conf
grafana/: Dockerfile  grafana.ini  grafana.ini.tftpl
jaeger/plugin/: .gitignore  (+7 more)
online-store/: db-scripts.sql
online_store/: requirements.txt
opentelemetry-collector/: Dockerfile  config.tftpl
python-app/: Dockerfile  main_service.py  otel.py  requirements.txt  service.py
scripts/: init-aks.sh  pricing_comparison.py  restart-online-store.sh
(+75 files in other folders)
