[project]
name = "chess-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.5.6",
    "autogen-ext[azure,mcp,openai]>=0.5.6",
    "chess>=1.11.2",
    "chess-board>=0.4.1",
    "fastapi-mcp>=0.3.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.33.1",
    "opentelemetry-exporter-otlp-proto-http>=1.33.1",
    "opentelemetry-instrumentation-fastapi>=0.54b1",
    "opentelemetry-instrumentation-httpx>=0.54b1",
    "opentelemetry-instrumentation-logging>=0.54b1",
    "opentelemetry-instrumentation-openai>=0.40.6",
    "opentelemetry-instrumentation-requests>=0.54b1",
    "opentelemetry-sdk>=1.33.1",
]
