[project]
name = "chess-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.5.6",
    "autogen-ext[azure,mcp,openai]>=0.5.6",
    "chess>=1.11.2",
    "chess-board>=0.4.1",
    "fastapi-mcp>=0.3.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.7.1",
]
